--- a/index.html
+++ b/index.html
@@ -1,18 +1,35 @@
 <html>
-<head>
-<meta name="googlebot" content="noindex,noarchive,nofollow,nosnippet,nositelinkssearchbox,notranslate,noimageindex,noydir,noodp">
-<meta name="robots" content="noindex,noarchive,nofollow,nosnippet,nositelinkssearchbox,notranslate,noimageindex,noydir,noodp">
-</head>
-<body>
 
-<table>
-<!-- hellstrom.pw -->
-<tr>  <td> <a href="https://andershellstrom.name">andershellstrom.name</a> </td>   </tr>
-<tr>  <td> <a href="https://andershellstrom.net">andershellstrom.net</a> </td>   </tr>
-<tr>  <td> hellstrom.pw </td>   </tr>
-<!--  <tr>  <td> <a href=""></a> </td>   </tr>   -->
-<!-- <tr>  <td> <a href=""></a> </td>   </tr>    -->  
-</table>
-  
+<head>
+	<meta name="googlebot" content="noindex,noarchive,nofollow,nosnippet,nositelinkssearchbox,notranslate,noimageindex,noydir,noodp">
+	<meta name="robots" content="noindex,noarchive,nofollow,nosnippet,nositelinkssearchbox,notranslate,noimageindex,noydir,noodp">
+  <meta name="wot-verification" content="1fa55e76fcacc7f04489"/></head>
+
+<body>
+	<table>
+		<!-- hellstrom.pw -->
+		<tr>
+			<td> <a href="https://andershellstrom.se">andershellstrom.se</a> </td>
+		</tr>
+		<tr>
+			<td> <a href="https://andershellstrom.name">andershellstrom.name</a> </td>
+		</tr>
+		<tr>
+			<td> <a href="https://andershellstrom.net">andershellstrom.net</a> </td>
+		</tr>
+		<tr>
+			<td> hellstrom.pw </td>
+		</tr>
+		<!--  <tr>  <td> <a href=""></a> </td>   </tr>   -->
+		<!-- <tr>  <td> <a href=""></a> </td>   </tr>    -->
+	</table>
+	<hr/>
+	<table>
+		<<tr>
+			<td> <a href="https://keybase.io/andershellstrom3">https://keybase.io/andershellstrom3</a> </td>
+			</tr>
+			<!-- <tr>  <td> <a href=""></a> </td>   </tr>    -->
+	</table>
 </body>
+
 </html>
