--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 			<td> <a href="https://andershellstrom.name" rel="me">andershellstrom.name</a> </td>
 		</tr>
 		<tr>
-			<td> <a href="https://andershellstrom.net" rel="me">andershellstrom.net</a> </td>
+			<td> <a href="https://andershellstrom.net" rel="me">AndersHellstrom.net</a> </td>
 		</tr>
 		<tr>
-			<td>  hellstrom.pw </td>
+			<td>  <a href="hellstrom.pw" rel="me">hellstrom.pw </td>
 		</tr>
 		<!--  <tr>  <td> <a href=""></a> </td>   </tr>   -->
 		<!-- <tr>  <td> <a href=""></a> </td>   </tr>    -->
@@ -57,9 +57,9 @@
 <!-- <div class="p-org"> </div> -->
 <!-- <img class="u-photo" src="http://example.com/sk.jpg"/> -->
 <a class="u-url" href="https://andershellstrom.se" rel="me">AndersHellstrom.se</a>,
-<a class="u-url" href="https://andershellstrom.net" rel="me">AndersHellstrom.net</a> 
-<a class="u-url" href="https://andershellstrom.name" rel="me">AndersHellstrom.net</a>,
-<!-- <a class="u-url" href="https://hellstrom.pw" rel="me">Hellstrom.pw</a> -->
+<a class="u-url" href="https://andershellstrom.net" rel="me">AndersHellstrom.net</a>
+<a class="u-url" href="https://andershellstrom.name" rel="me">AndersHellstrom.net</a>
+<a class="u-url" href="https://hellstrom.pw" rel="me">Hellstrom.pw</a>,
 <a class="u-email" href="mailto:sally@example.com">e</a>
 <!-- <div class="p-tel"> </div> -->
 <!-- <div class="p-street-address"> </div> -->
