--- a/index.html
+++ b/index.html
@@ -2,15 +2,21 @@
 
 <head>
 
-<meta name="robots" content="noarchive,noimageindex,noydir,noodp">
+<meta name="robots" content="noarchive">
   <meta name="viewport" content=
   "width=device-width, initial-scale=1" />
   <link rel="stylesheet" href=
   "https://www.w3schools.com/w3css/4/w3.css" />
   <link rel="stylesheet" href=
   "https://fonts.googleapis.com/css?family=Karma" />
-  <link rel="stylesheet" href="https://andershellstrom.net/my.css" /> 	
+  <link rel="stylesheet" href="https://andershellstrom.net/my.css" /> 
+  <meta charset="UTF-8">
+  <meta name="keywords" content="Anders, Hellström,Anders Hellström,Hellstrom,pw">
+  <meta name="description" content="Hellstrom.pw">
+  <meta name="author" content="Anders Hellström">
 </head>
+	<title>Hellstrom.pw</title>
+	<h1>Hellstrom.pw</h1>
 <body>
 <hr/>	
 <div  class="lnk">
